--- a/src/styles/components/_text-btn.scss
+++ b/src/styles/components/_text-btn.scss
@@ -8,7 +8,7 @@
 
   &__icon {
     --dimension: 0.65em;
-    height: var(--dimension);
-    width: var(--dimension);
+    block-size: var(--dimension);
+    inline-size: var(--dimension);
   }
 }
