--- a/src/styles/components/_anchor-heading.scss
+++ b/src/styles/components/_anchor-heading.scss
@@ -22,8 +22,8 @@
     }
 
     svg {
-      height: 1.25rem;
-      width: 1.25rem;
+      block-size: 1.25rem;
+      inline-size: 1.25rem;
     }
   }
 }
