--- a/src/styles/components/_ide.scss
+++ b/src/styles/components/_ide.scss
@@ -2,7 +2,7 @@
 
 .ide-wrapper {
   margin-inline: auto;
-  max-width: 74rem;
+  max-inline-size: 74rem;
   padding-block-end: get-css-variable(--section-gap);
 }
 
@@ -32,8 +32,8 @@
   &__control {
     --dimension: 0.75rem;
     border-radius: 50%;
-    height: var(--dimension);
-    width: var(--dimension);
+    block-size: var(--dimension);
+    inline-size: var(--dimension);
   }
 
   &__inner {
@@ -73,7 +73,7 @@
     &-helper {
       @include layout-stack('s');
       display: none;
-      height: 100%;
+      block-size: 100%;
       overflow-y: auto;
       padding: 2rem;
 
@@ -86,8 +86,8 @@
   &__editor,
   .prism-code-wrapper,
   .prism-code {
-    height: 100%;
-    max-height: 28rem;
+    block-size: 100%;
+    max-block-size: 28rem;
   }
 
   pre[class*=language-] {
@@ -114,8 +114,8 @@
       --dimension: 0.9rem;
       color: hsl(207deg 90% 61%);
       flex-shrink: 0;
-      height: var(--dimension);
-      width: var(--dimension);
+      block-size: var(--dimension);
+      inline-size: var(--dimension);
     }
   }
 
@@ -146,8 +146,8 @@
       --dimension: 0.85rem;
       color: hsl(330deg 53% 60%);
       flex-shrink: 0;
-      height: var(--dimension);
-      width: var(--dimension);
+      block-size: var(--dimension);
+      inline-size: var(--dimension);
     }
   }
 
