--- a/src/styles/components/_notification.scss
+++ b/src/styles/components/_notification.scss
@@ -69,9 +69,9 @@
     background-color: color('background');
     border: 4px solid color('background');
     border-radius: 1rem;
-    height: 2rem;
+    block-size: 2rem;
     inset: calc(-1rem - 4px) -1rem auto auto;
     position: absolute;
-    width: 2rem;
+    inline-size: 2rem;
   }
 }
