--- a/src/styles/components/_table-of-content.scss
+++ b/src/styles/components/_table-of-content.scss
@@ -9,7 +9,7 @@
       color('track-background', 'scrollbar'),
       0.5rem
     );
-    max-height: calc(100vh - 4rem);
+    max-block-size: calc(100vh - 4rem);
     overflow-x: hidden;
     overflow-y: auto;
   }
@@ -27,7 +27,7 @@
       @include clear-list;
       @include layout-stack('xs');
 
-      max-width: 95%;
+      max-inline-size: 95%;
 
       ol {
         margin-block-start: spacer('xs');
