--- a/src/styles/components/card/_accordion.scss
+++ b/src/styles/components/card/_accordion.scss
@@ -21,14 +21,14 @@
     justify-content: space-between;
     padding: spacer('m');
     text-align: start;
-    width: 100%;
+    inline-size: 100%;
 
     &:focus-visible {
       svg {
         @include focus-ring(
           $type: config('focus-ring-type', $btn),
           $ring-color: color('primary'),
-          $ring-width: config('focus-ring-width', $btn),
+          $ring-size: config('focus-ring-size', $btn),
           $ring-offset: config('focus-ring-offset', $btn),
         );
       }
@@ -41,8 +41,8 @@
       border-radius: config('border-radius-sm', $display);
       color: hsl(0deg 0% 100%);
       flex-shrink: 0;
-      height: var(--dimension);
-      width: var(--dimension);
+      block-size: var(--dimension);
+      inline-size: var(--dimension);
     }
 
     &[aria-expanded='true'] .vertical-line {
