--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -66,7 +66,7 @@ $color-dark: hsl(260deg 70% 6%);
   ),
   $dark-colors: dark.$colors,
   $layout: (
-    'container-width': 94rem,
+    'container-inline-size': 94rem,
   ),
   $settings: (
     'css-custom-properties': true,
