--- a/src/styles/layouts/article/_post-heading.scss
+++ b/src/styles/layouts/article/_post-heading.scss
@@ -32,7 +32,7 @@
   @include clear-list;
   align-items: center;
   display: flex;
-  max-width: 100%;
+  max-inline-size: 100%;
   overflow-x: auto;
   white-space: nowrap;
 
@@ -46,10 +46,10 @@
       border-inline-end: 2px solid color('arrow', 'breadcrumb');
       content: '';
       display: inline-flex;
-      height: 0.4em;
+      block-size: 0.4em;
       margin-inline: 0.75em;
       transform: rotate(-45deg);
-      width: 0.4em;
+      inline-size: 0.4em;
     }
   }
 
@@ -57,6 +57,6 @@
     @include text-ellipsis(1);
     display: inline-block;
     text-align: start;
-    width: 20ch;
+    inline-size: 20ch;
   }
 }
