--- a/src/styles/mixins/_sidebar.scss
+++ b/src/styles/mixins/_sidebar.scss
@@ -8,12 +8,11 @@
   &::before {
     background-color: color('primary');
     border-radius: 0 config('border-radius-sm', $display) config('border-radius-sm', $display) 0;
-    bottom: 0;
+    inset-block: 0;
     content: '';
     inset-inline-start: -1rem;
     position: absolute;
-    top: 0;
-    width: 0.3rem;
+    inline-size: 0.3rem;
   }
 }
 
