--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -76,6 +76,9 @@ $colors: (
     'gradient-start': hsl(206deg 100% 6%),
     'gradient-end': hsl(206deg 100% 7%),
   ),
+  'ide': (
+    'header-background': hsl(0deg 0% 0%),
+  ),
   'navigation': (
     'icon-background': hsl(207deg 23% 26%),
     'icon-background-hover': hsl(207deg 39% 17%),
