--- a/src/styles/config/_fonts.scss
+++ b/src/styles/config/_fonts.scss
@@ -18,18 +18,18 @@
 );
 
 @include font-face(
-  'Sora',
-  '../fonts/sora-v11-latin-regular.woff2'
+  'Figtree',
+  '../fonts/figtree-v5-latin-regular.woff2'
 );
 
 @include font-face(
-  'Sora',
-  '../fonts/sora-v11-latin-500.woff2',
+  'Figtree',
+  '../fonts/figtree-v5-latin-500.woff2',
   500
 );
 
 @include font-face(
-  'Sora',
-  '../fonts/sora-v11-latin-700.woff2',
+  'Figtree',
+  '../fonts/figtree-v5-latin-700.woff2',
   700
 );
