--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  --doc-heading-font-family: 'Sora', sans-serif;
+  --doc-heading-font-family: 'Figtree', sans-serif;
   --doc-body-font-family: 'Inter', sans-serif;
   --doc-border-radius-sm: 0.75rem;
   --doc-border-radius-md: 0.925rem;
