--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -10,49 +10,26 @@
 }
 
 .hero {
-  &__inner {
-    align-items: center;
-    display: grid;
-    gap: spacer-clamp('l', 'xl');
-    grid-template-columns: minmax(0, 1fr);
-    padding-block: get-css-variable(--section-gap-half) get-css-variable(--section-gap);
-
-    @include breakpoint('md') {
-      grid-template-columns: minmax(0, 1fr) minmax(0, 1.2fr);
-      padding-block-start: 0;
-    }
-  }
-
-  &__image {
-    animation: rotate infinite 100s linear;
-    animation-direction: alternate;
-    margin-inline: auto;
-    max-inline-size: 13.5rem;
-    order: -1;
-
-    @include breakpoint('md') {
-      max-inline-size: 100%;
-      order: 2;
-    }
-  }
-
   &__caption {
     text-align: center;
+    margin-inline: auto;
+    max-inline-size: 52rem;
+    padding-block: get-css-variable(--section-gap-half);
 
     @include breakpoint('md') {
-      padding-block: get-css-variable(--section-gap-half);
-      text-align: start;
+      padding-block: calc(#{get-css-variable(--section-gap-half)} / 1.25) get-css-variable(--section-gap-half);
     }
   }
 
   &__note {
     background-color: color('note-background', 'hero');
     border-radius: config('border-radius-sm', $display);
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
     color: color('note-color', 'hero');
-    display: inline-flex;
+    display: inline;
     font-size: 1rem;
     line-height: config('line-height-md', $typography);
-    margin-block-end: 1.5rem;
     padding: 0.5em 1em;
     text-decoration: none;
 
@@ -60,14 +37,19 @@
     &:focus {
       color: color('note-color', 'hero');
     }
+
+    + * {
+      margin-block-start: 1.5rem !important;
+    }
   }
 
   &__title {
-    font-size: responsive-font-size(5.5rem, 35, '4vw + 1rem');
+    font-size: responsive-font-size(5rem, 45, '4vw + 1rem');
     font-weight: 400;
     letter-spacing: -3px;
     margin-block: 0;
     max-inline-size: 50ch;
+    text-wrap: balance;
 
     span {
       font-weight: 700;
@@ -75,9 +57,10 @@
   }
 
   &__description {
-    font-size: responsive-font-size(1.35rem, 30, '1vw + 1rem');
+    font-size: responsive-font-size(1.35rem, 30, '1vw + 0.85rem');
     margin-block: 1.25rem 0;
-    max-inline-size: 60ch;
+    margin-inline: auto;
+    max-inline-size: 55ch;
   }
 
   &__btns {
@@ -87,23 +70,5 @@
     gap: spacer('m');
     justify-content: center;
     margin-top: 2.15rem;
-
-    @include breakpoint('md') {
-      justify-content: start;
-    }
-  }
-}
-
-@keyframes rotate {
-  0% {
-      transform: rotate(-15deg);
-  }
-
-  50% {
-      transform: rotate(0deg);
-  }
-
-  100% {
-      transform: rotate(15deg);
   }
 }
