--- a/src/styles/components/_ide.scss
+++ b/src/styles/components/_ide.scss
@@ -92,7 +92,7 @@
   }
 
   pre[class*=language-] {
-    border-radius: 0 0 0.925rem 0;
+    border-radius: 0 0 0.925rem;
     padding: 2rem 2.25rem;
   }
 }
