--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -72,7 +72,7 @@ $colors: (
   ),
   'hero': (
     'note-color': hsl(0deg 0% 100%),
-    'note-background': hsl(210deg 100% 70% / 15%),
+    'note-background': hsl(207deg 64% 16%),
     'gradient-start': hsl(206deg 100% 6%),
     'gradient-end': hsl(206deg 100% 7%),
   ),
