--- a/src/styles/components/_site-footer.scss
+++ b/src/styles/components/_site-footer.scss
@@ -6,14 +6,6 @@
   color: hsl(0deg 0% 100% / 85%);
   font-size: 1rem;
 
-  &__col {
-    &--slogan {
-      align-items: start;
-      display: flex;
-      flex-direction: column;
-    }
-  }
-
   a {
     color: color('link', $only-color: true, $map: dark.$colors);
 
@@ -46,9 +38,13 @@
   }
 
   &__logo {
-    block-size: 2.5rem;
     display: inline-flex;
     opacity: 0.15;
+
+    svg {
+      block-size: auto;
+      inline-size: 2.5rem;
+    }
   }
 
   &__title {
