--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -58,7 +58,8 @@
     font-weight: 400;
     letter-spacing: -3px;
     margin-block: 0;
-    max-inline-size: 50ch;
+    margin-inline: auto;
+    max-inline-size: 15ch;
     text-wrap: balance;
 
     span {
