--- a/src/styles/components/card/_accordion.scss
+++ b/src/styles/components/card/_accordion.scss
@@ -26,10 +26,10 @@
     &:focus-visible {
       svg {
         @include focus-ring(
-          $type: config('focus-ring-type', $btn),
-          $ring-color: color('primary'),
-          $ring-size: config('focus-ring-size', $btn),
-          $ring-offset: config('focus-ring-offset', $btn),
+          $type: config('focus-ring-type', $btn, false),
+          $ring-color: color('primary-background', 'btn'),
+          $ring-size: config('focus-ring-size', $btn, false),
+          $ring-offset: config('focus-ring-offset', $btn, false),
         );
       }
     }
