--- a/src/styles/components/_site-footer.scss
+++ b/src/styles/components/_site-footer.scss
@@ -53,6 +53,10 @@
     margin-block: 0 spacer('m');
   }
 
+  strong {
+    color: hsl(0 0% 100%);
+  }
+
   &__navigation {
     @include clear-list;
     @include layout-stack('xs');
